# nf-rs

./: .env  .env_exemple  .gitignore  Cargo.toml  LICENSE
.sqlx/: query-1563c8056d4971697e06b0b0f04efeeb74bbcbaf57ea9e559cfa2dd19b4b73ea.json  query-15be0456249d34cc679d0dbdc8360ed32998aecffbfbd9ddd301730288e7db21.json  query-2511559c6818cb020b9f8fdeafcdfb3406751b712d470721b5f2faafee32f8d7.json  query-2576dc607b04774c458f9baea92c6bf7419dbb7a92148155e74239361e5de065.json  query-294a52a9328d12d0b9e39ff274616098ecffac232f1eeec976eb0bfb62c632c2.json  query-2ea32863edc579f36196c48cc72b86f6b1007f9556e2ef1e6a6eb1e983db7500.json  query-2f504f045cc70c5ae8f8ac0120d5ded2050a3e925d917517e48c9708b8c21867.json  query-38c2c5485995f2dd4eb80888dac93056343d94e795fd6f5f30d519d6092da70b.json  query-390b89cb0f6a24d8d082dcc43af668ac7a57588047907c839ec88b4edfafe3e4.json  query-398ce1fa640d97cbb63e01cff1b2c0548d676bd33e7b18dfde30fd030775a9d4.json  query-49f937a78b8c32c29e8cb08e91498c182593c8e2fb954842ae396462abc64301.json  query-4b6cfd5c215cf317e4bcdd1247971a51be083c53755250c0c71deec953f29e45.json  query-5bfba6c95e666b398384a1f0db46d28341aba1670f05014ecbd6aaecedb36a35.json  query-5e2b978bbcbb8b7ffb50745d654b91ba4c0062ca046e0c07a3bbc7290600d6b4.json  query-64d6b3b1625b6a700515b0bbaea608ec401e988e40aa587d11e2326a608f35ac.json  query-679793c696f11b8d7356005c7972bf9d18bb9802a1dcbd0a9cbecc572b9608eb.json  query-6cbec7ba45acb330fe6f4bb22f10d0846f6c03ad46400b248ac001e3ff944519.json  query-719195f894311fc1e8f7982ea35dc1022eb164a64a9de654e134933f923fee97.json  query-76647ae66508173a39b662d3b97d8c670d82c6a70cbbe0027cfebe1eaa6317c6.json  query-85ace9c36f53891c6fc0cb2687291d10ed740d80c16739a1a4a5324b24aefdeb.json  query-8d5904d59269e11d60cf7ecf213657608d78775333075eb8b71f6340c04a1183.json  query-96e0f466b60f16be3997128010c00d06b4aaa9937c9b0848e0b028d3b82535c5.json  query-97b1f187ab361ab0c3d8cda8757673b533cb69755504a6f63fb300fe8c04a977.json  query-9d8442888486a4bc8c338c3df33a6622329bbddc6895dfc51a86779df23a12e2.json  query-9f885c7ac7c9cb3b4689da3ce6f02bd2b0edbc1fe12969eae39f2f0ea639be99.json  query-aa7bb6648973cb1240ead79336e41da1dd5b00b8bbaa70becd965a2617add102.json  query-ac92d03569f3e895a4557188f3d2a03b756cc1ad6088fe4791bd5b951315a45e.json  query-b49d942b5750060b2107136c714eaf0855b294c500fa4f4d237e835423fc286c.json  query-ba94a6be590b1d64f0d74e006082c8cd2a35af13917d8c9cabe4d9d55c11af24.json  query-c0c44054833f9988bc7bda0f70fa7c98ab555a2f7e4eb90dcf5de057265f79a9.json  query-cdbbfb462404e0f923c7de11180b3c9d9cfaabbf50fb48bd3bfa93db06a25396.json  query-d40e233d764e234519ca134280af5b0d396d111588788711b96f911209746541.json  query-d8e5238830dd2ff05e88fc5d310e27ead689e94a4195effd8291d8d5fd41213b.json  query-e27baf8d2e6c6ad3fac029c762d5d47862df3f15759b9486d8b0300a2752b101.json  query-e86bf6aa77baf2e7d53e86cfbcc9f486d8b7f4a8f3ff7e8044daf9acc1898b63.json  (+2 more)
core_handler_nf/: Cargo.toml
core_handler_nf/src/: insert_in_database_handler.rs  lib.rs  main.rs
core_sql/: Cargo.toml
core_sql/src/: lib.rs  main.rs
core_sql/src/modules/: connection.rs  mod.rs
core_sql/src/modules/empresas/: insert.rs  mod.rs  select.rs  update.rs
core_sql/src/modules/nfe/: mod.rs
core_sql/src/modules/nfe/dest/: insert.rs  select.rs
core_sql/src/modules/nfe/emit/: insert.rs  select.rs
core_sql/src/modules/nfe/ender/: delete.rs  insert.rs  select.rs
core_sql/src/modules/nfe/nfe_sql/: delete.rs  insert.rs  mod.rs  select.rs
core_sql/src/modules/nfe/produtos/: insert.rs  mod.rs  select.rs
core_sql/src/modules/nfe/produtos/impostos/: mod.rs
core_sql/src/modules/nfe/produtos/impostos/cofins/: insert.rs  select.rs
core_sql/src/modules/nfe/produtos/impostos/icms/: insert.rs  select.rs
core_sql/src/modules/nfe/produtos/impostos/icms_uf_dest/: insert.rs  select.rs
core_sql/src/modules/nfe/produtos/impostos/ipi/: delete.rs  insert.rs  select.rs
core_sql/src/modules/nfe/produtos/impostos/pis/: insert.rs  select.rs
core_sql/src/modules/nfse/: insert.rs  select.rs
core_sql/src/modules/permissoes/: insert.rs  mod.rs  select.rs  update.rs
core_sql/src/modules/usuarios/: insert.rs  mod.rs  select.rs  update.rs
core_sql/src/modules/utils/: create.rs  mod.rs  parser.rs
core_sql/src/structs/: mod.rs
core_sql/src/structs/empresas/: empresa_struct.rs  mod.rs
core_sql/src/structs/permissoes/: mod.rs  struct_permissions.rs
core_sql/src/structs/usuarios/: mod.rs  struct_user.rs
db/: Cargo.toml
nfe/: Cargo.toml
nfe/migrations/: 0001_nfe_migrate.sql
nfe/src/: _main.rs  insert_in_database.rs  lib.rs  main.rs  run.rs
nfe/src/modules/: mod.rs
nfe/src/modules/json/: json_to_obsject.rs  mod.rs
nfe/src/modules/json/ipl/: dest.rs  emit.rs  ender.rs  mod.rs  nfe.rs  produto.rs
nfe/src/modules/json/ipl/impostos/: cofins.rs  icms.rs  icms_uf_dest.rs  ipi.rs  mod.rs  pis.rs
nfe/src/modules/json/structs/: dest.rs  emit.rs  ender.rs  impostos.rs  mod.rs  nfe.rs  nfe_struct.rs  produtos.rs
nfe/src/modules/sql/: connect.rs  connection_postgres.rs  delete.rs  insert.rs  migration.rs  mod.rs  select.rs  update.rs
nfe/src/modules/util/: mod.rs  parse_utils.rs  read_folder.rs
nfe/tests/data/: 1.json  1.xml  2.xml
watcher/: Cargo.toml
watcher/src/: main.rs
web_api/: Cargo.toml
web_api/src/: main.rs
web_api/src/public/uploads/: nfe_23240303007414000130550020016116231781753088.xml
web_api/src/routes/: auth_routes.rs  empresas_routers.rs  empresas_routes.rs  mod.rs  nfe_routers.rs  nfe_routes.rs  users_routers.rs
web_api/src/services/: get.rs  mod.rs  upload.rs
web_api/src/services/auth/: argon2.rs  auth_handlers.rs  jwt.rs  mod.rs  struct_user.rs
web_api/src/services/empresas/: create.rs  get.rs  mod.rs  struct_empresas.rs  update.rs
web_api/src/services/nfe/: delete.rs  get.rs  mod.rs  upload.rs
web_api/src/services/users/: create.rs  get.rs  mod.rs  select.rs  struct_users.rs  update.rs
web_api/src/services/utils/: api_error.rs  api_ok.rs  constants.rs  gets.rs  guard.rs  mod.rs  parse.rs
xml_json/: Cargo.toml
xml_json/src/: core.rs  json.rs  lib.rs  utils.rs
xml_json/tests/data/: 2.xml
(+56 files in other folders)
