[package]
name = "xmls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

quick-xml = "0.31.0"
# quickxml_to_serde = "0.5.0"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
xml2json-rs = "1.0.1"