[package]
name = "core_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde","v4"] }
chrono = {version ="0.4.37", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "uuid", "time", "chrono", "macros", "bigdecimal"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"

nfe = { path = "../nfe" }
bigdecimal = "0.4.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
