[package]
name = "nfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }

quick-xml = "0.31.0"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
xml_json = { path = "../xml_json" }
