[package]
name = "nfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

quick-xml = "0.31.0"
serde_json = "1.0.111"
serde = { version = "1.0.194", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde","v4"] }

xml_json = { path = "../xml_json" }
