[package]
name = "nfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "uuid"] }

quick-xml = "0.31.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["serde","v4"] }

xml_json = { path = "../xml_json" }
