[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"

nfe = { path = "../nfe" }
core_handler_nf = { path = "../core_handler_nf" }
