[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart", "macros"]}
axum-extra = { version = "0.9.3", features = ["cookie"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
tower-http = {version = "0.5.2", features = ["cors"]}
uuid = { version = "1.8.0", features = ["serde","v4"] }
chrono = {version ="0.4.37", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
anyhow = "1.0.81"
argon2 = "0.5.3"

jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"

nfe = { path = "../nfe" }
core_sql = { path = "../core_sql" }