[package]
name = "xml_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0.193", features = ["rc"] }
serde_json = "1.0.108"
quick-xml = { version = "0.31.0", features = ["serde"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"
